cabal-version:        3.8
name:                 tasty-hang
version:              0.0.0.1
synopsis:             Tasty hang
description:          Tasty hang.
copyright:            2025 Tasty hang.
author:               John Ky
maintainer:           newhoggy@gmail.com
category:             Test
license:              BSD-3-Clause
license-files:        LICENSE
                      NOTICE
build-type:           Simple
extra-source-files:   README.md

common project-config
  default-language:   GHC2021
  default-extensions: BlockArguments
                      DuplicateRecordFields
                      ImportQualifiedPost 
                      OverloadedRecordDot
                      OverloadedRecordUpdate
                      OverloadedStrings

  build-depends:      base >=4.14 && <4.22
  ghc-options:        -Wall
  ghc-options:        -Wunused-packages

executable tasty-hang-good
  import:             project-config
  hs-source-dirs:     tasty-hang-good
  main-is:            tasty-hang-good.hs
  ghc-options:        -threaded
                      -rtsopts
                      "-with-rtsopts=-N -T"
  build-depends:      bytestring,
                      tasty,
                      tasty-hunit,

executable tasty-hang-bad
  import:             project-config
  hs-source-dirs:     tasty-hang-bad
  main-is:            tasty-hang-bad.hs
  ghc-options:        -threaded
                      -rtsopts
                      "-with-rtsopts=-N -T"
  build-depends:      bytestring,
                      hedgehog,
                      tasty,
                      tasty-hunit,

executable tasty-hang-bad-bracketed
  import:             project-config
  hs-source-dirs:     tasty-hang-bad-bracketed
  main-is:            tasty-hang-bad-bracketed.hs
  ghc-options:        -threaded
                      -rtsopts
                      "-with-rtsopts=-N -T"
  build-depends:      bytestring,
                      hedgehog,
                      stm,
                      tasty,
                      tasty-hunit,

executable tasty-hang-bad-timed
  import:             project-config
  hs-source-dirs:     tasty-hang-bad-timed
  main-is:            tasty-hang-bad-timed.hs
  ghc-options:        -threaded
                      -rtsopts
                      "-with-rtsopts=-N -T"
  build-depends:      bytestring,
                      hedgehog,
                      tasty,
                      tasty-hunit,

executable tasty-hang-check2
  import:             project-config
  hs-source-dirs:     tasty-hang-check2
  main-is:            tasty-hang-check2.hs
  ghc-options:        -threaded
                      -rtsopts
                      "-with-rtsopts=-N -T"
  build-depends:      bytestring,
                      hedgehog,
                      tasty,
                      tasty-hunit,

executable tasty-hang-none
  import:             project-config
  hs-source-dirs:     tasty-hang-none
  main-is:            tasty-hang-none.hs
  ghc-options:        -threaded
                      -rtsopts
                      "-with-rtsopts=-N -T"
  build-depends:      bytestring,
                      hedgehog,
                      unliftio,

executable tasty-hang-check
  import:             project-config
  hs-source-dirs:     tasty-hang-check
  main-is:            tasty-hang-check.hs
  ghc-options:        -threaded
                      -rtsopts
                      "-with-rtsopts=-N -T"
  build-depends:      bytestring,
                      check-core,
                      hedgehog,
                      hw-prelude,

executable tasty-hang-readless
  import:             project-config
  hs-source-dirs:     tasty-hang-readless
  main-is:            tasty-hang-readless.hs
  ghc-options:        -threaded
                      -rtsopts
                      "-with-rtsopts=-N -T"
  build-depends:      hedgehog,
                      random,
                      tasty,
                      tasty-hunit,

executable tasty-hang-hunit-readless
  import:             project-config
  hs-source-dirs:     tasty-hang-hunit-readless
  main-is:            tasty-hang-hunit-readless.hs
  ghc-options:        -threaded
                      -rtsopts
                      "-with-rtsopts=-N -T"
  build-depends:      tasty,
                      tasty-hunit,
                      random,
